[project]
name = "changelogger-cli"
version = "0.1.0"
description = "CLI tool for creating changelogs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "litellm[google]>=1.87.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
changelogger = "changelogger_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
